--- a/Profile.html
+++ b/Profile.html
@@ -14,7 +14,7 @@
                 <p>Saya seorang Desainer Grafis, dua tahun membangun pengalaman profesional di dunia Desain Grafis, berfokus pada kreativitas, konsistensi visual, dan eksekusi yang detail.</p>
             </div>
             <div class="profile-pic">
-                <img src="Mask group.png" alt="Foto Profil Ajie Raka">
+                <img src="Image/Mask group.png" alt="Foto Profil Ajie Raka">
             </div>
         </header>
 
