--- a/index.html
+++ b/index.html
@@ -51,20 +51,18 @@
     </section>
 
     <section class="contact" id="kontak">
-    <section class="contact">
         <div class="container">
             <h2>Let's talk on something great together</h2>
             <div class="contact-info">
                 <p><i class="fas fa-envelope"></i> adjieraka006@gmail.com</p>
-                <p><i class="fas fa-phone-alt"></i> +62 851-7305-3511</p>
+                <p><i class="fas fa-phone-alt"></i> ‪+62 851-7305-3511‬</p>
                 <p><i class="fas fa-map-marker-alt"></i> Buana Residence</p>
             </div>
         </div>
-    </section>
+    </section>
 
     <footer>
         <p>© Copyright jwsrk</p>
     </footer>
-
 </body>
 </html>
