--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="hero">
             <div class="hero-text">
                 <span class="greeting">Hello Semua</span>
-                <h1>Saya Ajie Raka, Design Grafis dan Konten Kreator.</h1>
+                <h1>Saya Ajie Raka, Desain Grafis dan Konten Kreator.</h1>
             </div>
             <div class="hero-image">
                 <img src="Image/Mask group.png" alt="Foto Ajie Raka">
@@ -55,7 +55,7 @@
             <h2>Let's talk on something great together</h2>
             <div class="contact-info">
                 <p><i class="fas fa-envelope"></i> adjieraka006@gmail.com</p>
-                <p><i class="fas fa-phone-alt"></i> ‪+62 851-7305-3511‬</p>
+                <p><i class="fas fa-phone-alt"></i> +62 851-7305-3511</p>
                 <p><i class="fas fa-map-marker-alt"></i> Buana Residence</p>
             </div>
         </div>
